Grace/tests/gibbs/errors/t218.grace
// ERROR = P1004
match(x)
    case 1 | 2 -> print "One or two"

print "hi"
